# docs/swagger.json
@@ -161,6 +161,12 @@
                         "name": "id",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "强制删除",
+                        "name": "force",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -289,7 +295,7 @@
                 }
             }
         },
-        "/lend/book": {
+        "/lending/book": {
             "post": {
                 "description": "借书",
                 "consumes": [
@@ -470,7 +476,7 @@
                     {
                         "type": "integer",
                         "description": "每页数量",
-                        "name": "pageSize",
+                        "name": "size",
                         "in": "query"
                     }
                 ],
@@ -824,7 +830,7 @@
             }
         },
         "/reader/password": {
-            "put": {
+            "post": {
                 "description": "读者修改密码",
                 "consumes": [
                     "application/json"
@@ -1188,45 +1194,65 @@
             ],
             "properties": {
                 "author": {
+                    "description": "作者名",
                     "type": "string",
                     "example": "许式伟"
                 },
                 "createdAt": {
+                    "description": "创建时间",
                     "type": "string",
-                    "example": "2021-01-01 00:00:00"
+                    "example": "2023-06-13T19:06:22.514+08:00"
+                },
+                "deletedAt": {
+                    "description": "删除时间 - 软删除",
+                    "type": "string",
+                    "example": "2023-06-13T19:06:22.514+08:00"
                 },
                 "id": {
+                    "description": "主键ID",
                     "type": "integer",
                     "format": "int64",
                     "example": 1
                 },
+                "originStock": {
+                    "description": "原始库存量",
+                    "type": "integer",
+                    "example": 100
+                },
                 "price": {
+                    "description": "价格",
                     "type": "number",
                     "example": 99.99
                 },
                 "publishDate": {
+                    "description": "出版日期",
                     "type": "string",
                     "example": "2019-01-01"
                 },
                 "publisher": {
+                    "description": "出版社",
                     "type": "string",
                     "example": "电子工业出版社"
                 },
                 "stock": {
+                    "description": "库存量",
                     "type": "integer",
                     "example": 100
                 },
                 "summary": {
+                    "description": "书籍简介",
                     "type": "string",
                     "example": "Go语言编程是一本介绍Go语言的书籍，内容包括Go语言的基础知识、并发编程、网络编程、Web编程、数据库编程等。"
                 },
                 "title": {
+                    "description": "书名",
                     "type": "string",
                     "example": "Go语言编程"
                 },
                 "updatedAt": {
+                    "description": "更新时间",
                     "type": "string",
-                    "example": "2021-01-01 00:00:00"
+                    "example": "2023-06-13T19:06:22.514+08:00"
                 }
             }
         },
@@ -1244,31 +1270,41 @@
                     "$ref": "#/definitions/model.Book"
                 },
                 "bookId": {
+                    "description": "书籍ID",
                     "type": "integer",
                     "example": 1
                 },
                 "createdAt": {
+                    "description": "创建时间",
                     "type": "string",
-                    "example": "2021-01-01 00:00:00"
+                    "example": "2023-06-13T19:06:22.514+08:00"
+                },
+                "deletedAt": {
+                    "description": "删除时间 - 软删除",
+                    "type": "string",
+                    "example": "2023-06-13T19:06:22.514+08:00"
                 },
                 "id": {
+                    "description": "主键ID",
                     "type": "integer",
                     "format": "int64",
                     "example": 1
                 },
                 "lendTime": {
+                    "description": "借出时间",
                     "type": "string"
                 },
                 "reader": {
                     "$ref": "#/definitions/model.Reader"
                 },
                 "readerId": {
+                    "description": "读者ID",
                     "type": "integer",
                     "example": 1
                 },
                 "returnTime": {
-                    "type": "string",
-                    "example": "2021-01-01"
+                    "description": "预期归还时间",
+                    "type": "string"
                 },
                 "status": {
                     "enum": [
@@ -1284,8 +1320,9 @@
                     "example": 1
                 },
                 "updatedAt": {
+                    "description": "更新时间",
                     "type": "string",
-                    "example": "2021-01-01 00:00:00"
+                    "example": "2023-06-13T19:06:22.514+08:00"
                 }
             }
         },
@@ -1296,6 +1333,11 @@
                 2,
                 3
             ],
+            "x-enum-comments": {
+                "LendingStatusLending": "借出",
+                "LendingStatusReturned": "已归还",
+                "LendingStatusViolation": "违约"
+            },
             "x-enum-varnames": [
                 "LendingStatusLending",
                 "LendingStatusReturned",
@@ -1307,7 +1349,8 @@
             "required": [
                 "gender",
                 "name",
-                "phone"
+                "phone",
+                "studentNo"
             ],
             "properties": {
                 "book": {
@@ -1317,27 +1360,38 @@
                     }
                 },
                 "createdAt": {
+                    "description": "创建时间",
                     "type": "string",
-                    "example": "2021-01-01 00:00:00"
+                    "example": "2023-06-13T19:06:22.514+08:00"
+                },
+                "deletedAt": {
+                    "description": "删除时间 - 软删除",
+                    "type": "string",
+                    "example": "2023-06-13T19:06:22.514+08:00"
                 },
                 "gender": {
+                    "description": "性别",
                     "type": "string",
                     "example": "男"
                 },
                 "id": {
+                    "description": "主键ID",
                     "type": "integer",
                     "format": "int64",
                     "example": 1
                 },
                 "key": {
+                    "description": "密码（哈希值）",
                     "type": "string",
                     "example": "123456"
                 },
                 "name": {
+                    "description": "用户名",
                     "type": "string",
                     "example": "张三"
                 },
                 "phone": {
+                    "description": "手机号码",
                     "type": "string",
                     "example": "18888888888"
                 },
@@ -1348,12 +1402,15 @@
                     }
                 },
                 "studentNo": {
+                    "description": "学号",
                     "type": "integer",
+                    "minimum": 0,
                     "example": 2018000000
                 },
                 "updatedAt": {
+                    "description": "更新时间",
                     "type": "string",
-                    "example": "2021-01-01 00:00:00"
+                    "example": "2023-06-13T19:06:22.514+08:00"
                 }
             }
         },
@@ -1369,14 +1426,22 @@
                     "$ref": "#/definitions/model.Book"
                 },
                 "bookId": {
+                    "description": "书籍ID",
                     "type": "integer",
                     "example": 1
                 },
                 "createdAt": {
+                    "description": "创建时间",
                     "type": "string",
-                    "example": "2021-01-01 00:00:00"
+                    "example": "2023-06-13T19:06:22.514+08:00"
+                },
+                "deletedAt": {
+                    "description": "删除时间 - 软删除",
+                    "type": "string",
+                    "example": "2023-06-13T19:06:22.514+08:00"
                 },
                 "id": {
+                    "description": "主键ID",
                     "type": "integer",
                     "format": "int64",
                     "example": 1
@@ -1385,10 +1450,12 @@
                     "$ref": "#/definitions/model.Reader"
                 },
                 "readerId": {
+                    "description": "读者ID",
                     "type": "integer",
                     "example": 1
                 },
                 "status": {
+                    "description": "预约状态",
                     "enum": [
                         1,
                         2,
@@ -1403,8 +1470,9 @@
                     "example": 1
                 },
                 "updatedAt": {
+                    "description": "更新时间",
                     "type": "string",
-                    "example": "2021-01-01 00:00:00"
+                    "example": "2023-06-13T19:06:22.514+08:00"
                 }
             }
         },
@@ -1416,6 +1484,12 @@
                 3,
                 4
             ],
+            "x-enum-comments": {
+                "ReservationStatusCancel": "已取消",
+                "ReservationStatusPending": "进行中",
+                "ReservationStatusSuccess": "已借阅",
+                "ReservationStatusTimeout": "已超时"
+            },
             "x-enum-varnames": [
                 "ReservationStatusPending",
                 "ReservationStatusSuccess",
